crates/loxide_interpreter/tests/snapshots/integration@function__missing_arguments.snap
---
source: crates/loxide_interpreter/tests/integration.rs
expression: result
---
fun f(a, b) {}


f(1); // expect runtime error: Expected 2 arguments but got 1.


>>>>> Error Section <<<<<
  × Bad arity, expected: 2, found: 1
   ╭─[1:6]
 1 │ fun f(a, b) {}
   ·      ───┬──
   ·         ╰── function declare here with 2 parameters
 2 │ 
 3 │ f(1); // expect runtime error: Expected 2 arguments but got 1.
   ·  ─┬─
   ·   ╰── function call here with 1 parameters
   ╰────
